[project]
name = "fee-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.0",
    "networkx>=3.4.2",
    "ogmios>=1.4.2",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a20",
]
